[project]
#template from https://github.com/pypa/sampleproject/blob/main/pyproject.toml
name = "SMS_BP"  # Required

version = "0.0.1"  # Required

description = "Single Molecule Simulations and Microscopy Simulations developed for the Weber Lab by Baljyot Singh Parmar"  # Optional

readme = "README.md" # Optional

requires-python = ">=3.10"

license = {file = "LICENSE"}

keywords = ["SMS"]  # Optional

authors = [
  {name = "Baljyot Singh Parmar", email = "baljyotparmar@hotmail.com" } # Optional
]

maintainers = [
  {name = "Baljyot Singh Parmar", email = "baljyotparmar@hotmail.com" } # Optional
]

dependencies = [
  "numpy>=1.21.2",
  "matplotlib>=3.6.0",
  "scipy>=1.7.1",
  "pandas>=1.3.3",
  "scikit-learn>=1.0",
  "scikit-image>=0.18.3",
  "lmfit>=1.0.2",
]
[tool.setuptools.packages.find]
include = ["SMS_BP*"]
exclude = ["docs*", "tests*"]
[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"