[project]
#template from https://github.com/pypa/sampleproject/blob/main/pyproject.toml
name = "SMS_BP"  # Required

version = "0.0.1"  # Required

description = "Single Molecule Simulations and Microscopy Simulations developed for the Weber Lab by Baljyot Singh Parmar"  # Optional

readme = "README.md" # Optional

requires-python = ">=3.10"

license = {file = "LICENSE"}

keywords = ["SMS"]  # Optional

authors = [
  {name = "Baljyot Singh Parmar", email = "baljyotparmar@hotmail.com" } # Optional
]

maintainers = [
  {name = "Baljyot Singh Parmar", email = "baljyotparmar@hotmail.com" } # Optional
]

dependencies = [
  "numpy>=1.21.2",
  "matplotlib>=3.6.0",
  "scipy>=1.7.1",
  "scikit-image>=0.18.3",
  "fbm>=0.3.0",
  "Pillow==9.4.0"
]
[tool.setuptools.packages.find]
include = ["SMS_BP*"]
exclude = ["docs*", "tests*"]
[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
